--- a/src/views/components/common/modal.ejs
+++ b/src/views/components/common/modal.ejs
@@ -14,7 +14,7 @@
 						<b>We'll let you know when it's done</b></p>
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+					<button type="button" class="btn btn-secondary" onclick="toggleCategory()">Close</button>
 				</div>
 			</div>
 		</div>
