--- a/src/views/layouts/side-bar.ejs
+++ b/src/views/layouts/side-bar.ejs
@@ -2,7 +2,7 @@
     <div class="scrollbar-inner sidebar-wrapper">
         <div class="user">
             <div class="photo">
-                <img src="../../../static/assets/img/profile.jpg">
+                <img src="/static/assets/img/profile.jpg">
             </div>
             <div class="info">
                 <a class="" data-toggle="collapse" href="#collapseExample" aria-expanded="true">
@@ -37,12 +37,24 @@
         </div>
         <ul class="nav">
             <li class="nav-item active">
+                <a href="/orders">
+                    <i class="la la-table"></i>
+                    <p>Order</p>
+                </a>
+            </li>
+            <li class="nav-item active">
                 <a href="/categories">
                     <i class="la la-dashboard"></i>
                     <p>Category</p>
                 </a>
             </li>
             <li class="nav-item active">
+                <a href="/products">
+                    <i class="la la-clone"></i>
+                    <p>Products</p>
+                </a>
+            </li>
+            <!-- <li class="nav-item active">
                 <a href="/">
                     <i class="la la-dashboard"></i>
                     <p>Dashboard</p>
@@ -91,11 +103,11 @@
                 </a>
             </li>
             <li class="nav-item update-pro">
-                <button  data-toggle="modal" data-target="#modalUpdate">
+                <button id="toggleCategory" onclick="toggleCategory()">
                     <i class="la la-hand-pointer-o"></i>
                     <p>Update To Pro</p>
                 </button>
-            </li>
+            </li> -->
         </ul>
     </div>
 </div>
