--- a/src/views/pages/categories/list.ejs
+++ b/src/views/pages/categories/list.ejs
@@ -11,7 +11,10 @@
 			</div>
 		</div>
 	</div>
+	<%- include('../../components/common/modalCategory'); %>
 </body>
 <%- include('../../layouts/scripts/main'); %>
+<%- include('../../layouts/scripts/notifications'); %>
 <%- include('../../layouts/scripts/listCategory'); %>
+
 </html>
